<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/read_bm_dbx_2items"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tvAddNote"
        style="@style/EReader.Tiny"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ereader_add_note" />

    <TextView
        android:id="@+id/tvAddLine"
        style="@style/EReader.Tiny"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/ereader_add_line" />

    <TextView
        android:id="@+id/tvShowNote"
        style="@style/EReader.Tiny"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/ereader_show_note" />

    <TextView
        android:id="@+id/tvRemoveNote"
        style="@style/EReader.Tiny"
        android:layout_height="30dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/ereader_remove_note" />

</LinearLayout>