<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/read_bm_dbx"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp" >

    <TextView
        android:id="@+id/tvAddBookmark"
        style="@style/EReader.Small"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/ereader_add_bookmark" />

    <TextView
        android:id="@+id/tvShowBookmark"
        style="@style/EReader.Small"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/ereader_show_bookmark" />

    <TextView
        android:id="@+id/tvRemoveBookmark"
        style="@style/EReader.Small"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/ereader_remove_bookmark" />

</LinearLayout>