<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llLogin"
    android:layout_width="329dp"
    android:layout_height="438dp"
    android:background="@drawable/login_info"
    android:orientation="vertical" >

    <TextView
        style="@style/LoginLabel.Small.Bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/login_user_name" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/white"
        android:paddingLeft="5dp"
        android:singleLine="true" >
    </EditText>

    <TextView
        style="@style/LoginLabel.Small.Bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/login_user_pass" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginTop="3dp"
        android:background="@android:color/white"
        android:paddingLeft="5dp"
        android:password="true"
        android:singleLine="true" >
    </EditText>

    <CheckBox
        android:id="@+id/cbStayConnected"
        style="@style/LoginLabel.Small.Bold"
        android:layout_marginLeft="67dp"
        android:layout_marginTop="30dp"
        android:text="@string/stay_connected" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="67dp"
        android:layout_marginTop="40dp" >

        <Button
            android:id="@+id/btnLogin"
            style="@style/LoginLabel.Small.Bold.Blue"
            android:layout_alignParentLeft="true"
            android:background="@drawable/background_button_login"
            android:text="@string/login" />

        <Button
            android:id="@+id/btnRegister"
            style="@style/LoginLabel.Small.Bold.Blue"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_login"
            android:text="@string/register" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >

        <TextView android:id="@+id/tvForgotPass"
            style="@style/LoginLabel.Small"
            android:layout_height="55dp"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_marginRight="15dp"
            android:text="@string/forgot_password" />
    </RelativeLayout>

</LinearLayout>